Fixed margin of paragraph on first carousel on mobile for first page

--- a/themes/instanttheatre/sass/_bookings.scss
+++ b/themes/instanttheatre/sass/_bookings.scss
@@ -416,3 +416,8 @@
 .size-details {
   margin-bottom: 15px;
 }
+
+//overriding banner for front page mobile view 
+.banner-text-info p {
+  margin: 5px 0;
+}
